--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2922,6 +2922,17 @@ table.alt tbody tr td {
 	border-color: rgba(255, 255, 255, 0.35);
 }
 
+/* viztable */
+
+.viz td {
+	padding: 0em 0em;
+}
+
+.viz table {
+	margin: 0 0 0em 0;
+	width: 100%;
+}
+
 /* Features */
 
 .features {
