--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3958,8 +3958,20 @@ body.is-preload #header.alt .logo {
 
 .expandable {
 	display: none;
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-bottom: 56.25%;
 }
 
 div {
 	margin: 10px;
+}
+
+.youtube-video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
