--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3957,7 +3957,7 @@ body.is-preload #header.alt .logo {
 }
 
 .expandable {
-	display: none;
+	/* display: none; */
 	position: relative;
 	width: 100%;
 	height: 0;
