--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3474,11 +3474,11 @@ body.is-preload #header.alt .logo {
 	font-size: 0.9em;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 736px) {
 
-	#nav {
+	/* #nav {
 		display: none;
-	}
+	} */
 
 	#nav+#main {
 		padding-top: 0;
