--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3476,9 +3476,9 @@ body.is-preload #header.alt .logo {
 
 @media screen and (max-width: 736px) {
 
-	/* #nav {
+	#nav {
 		display: none;
-	} */
+	}
 
 	#nav+#main {
 		padding-top: 0;
